# soliplex-skills

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/workflows/: docs.yaml  gitleaks.yaml  issue-opened.yaml  pr-opened.yaml  pypi.yaml  python-lint.yaml  python-test.yaml  trufflehog.yaml
adoption/quickstart/: index.html
docs/: index.md
docs/adoption/: quickstart.md
docs/mechanisms/: building.md  installation.md  publishing.md  versions-cli.md
docs/overview/: concepts.md  release-model.md  skill-anatomy.md  skills-catalog.md
docs/reference/: api.md
mechanisms/building/: index.html
mechanisms/installation/: index.html
mechanisms/publishing/: index.html
mechanisms/versions-cli/: index.html
overview/concepts/: index.html
overview/release-model/: index.html
overview/skill-anatomy/: index.html
overview/skills-catalog/: index.html
reference/api/: index.html
src/soliplex_skills/: _archive.py  build.py  cli.py  config.py  exceptions.py  install.py  manifest.py  metadata.py  releases.py  rooms.py  versions.py
tests/unit/: conftest.py  test__archive.py  test_build.py  test_cli.py  test_config.py  test_install.py  test_manifest.py  test_metadata.py  test_releases.py  test_rooms.py  test_skeleton.py  test_versions.py
