# Packaging for `soliplex-skills`: shared infrastructure for releasing and
# upgrading versioned filesystem skills (https://agentskills.io) across the
# Soliplex projects. See README.md for scope and docs/ for the design overview.
#
# Dependency groups (https://docs.astral.sh/uv/concepts/dependencies):
#   - dev:  test + lint tooling (`uv run pytest`, etc.)
#   - docs: zensical, which builds the documentation site under docs/ into
#           site/ (`uv run zensical build`) and drives the docs CI workflow.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soliplex-skills"
version = "0.1.dev0"
description = "Shared release/upgrade infrastructure for Soliplex filesystem skills."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Soliplex" }]
keywords = ["soliplex", "agentskills", "skills", "release", "github"]

# Runtime dependencies are intentionally EMPTY. The version-management logic
# is vendored into skills as a standalone, stdlib-only `skill_versions.py`, so
# the library it consolidates must stay dependency-free too. Anything heavier
# (e.g. flow-preserving YAML) belongs behind an optional extra, never here.
dependencies = []

[project.urls]
Homepage = "https://soliplex.github.io/soliplex-skills/"
Repository = "https://github.com/soliplex/soliplex-skills"

[project.scripts]
soliplex-skills = "soliplex_skills.cli:main"

[dependency-groups]
dev = [
    "coverage",
    "pymarkdownlnt",
    "pytest",
    "ruff",
]
docs = [
    "zensical",
]

[tool.hatch.build.targets.wheel]
packages = ["src/soliplex_skills"]

[tool.coverage.run]
branch = true
source = ["soliplex_skills"]

# Linting configuration imported from ../soliplex/pyproject.toml.
# (target-version set to py312 to match this repo's requires-python.)
[tool.ruff]
line-length = 79
exclude = [
]
target-version = "py312"

[tool.ruff.lint]
select = [
    # flake8
    "F",
    # pycodestyle
    "E",
    # flake8-bugbear
    "B",
    # pyupgrade
    "U",
    # isort
    "I",
    # pandas vet
    "PD",
    # tryceratops
    "TRY",
    # flake8-pytest-style
    "PT",
]
ignore = [
    "PT019",  # incorrecly flags '@mock.patch' args as fixtures
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

[tool.pymarkdown]
extensions.front-matter.enabled = true
plugins.line-length.enabled = false             # md013
plugins.no-duplicate-heading.enabled = false    # md024
plugins.no-inline-html.enabled = false          # md033
plugins.no-emphasis-as-heading.enabled = false  # md036
plugins.first-line-heading.enabled = false      # md041
plugins.code-block-style.enabled = false        # md046
# There is no rule 'md060'
# plugins.md060.enabled = false                 # md060
